fix for site slideout on small screens

--- a/resources/assets/sass/layouts/_layout.scss
+++ b/resources/assets/sass/layouts/_layout.scss
@@ -71,12 +71,63 @@ footer {
 @include breakpoint(lg) {
   #left {
     flex-basis: 40px;
-    overflow: hidden;
     transition: all .5s ease;
+    position: relative;
+    z-index: 250;
+
+    .section-header,
+    .section-content {
+      position: absolute;
+      left: -234px;
+      width: 275px;
+      border-right: 1px solid $color-divider;
+      background-color: $color-background;
+      transition: all .3s ease;
+    }
+
+    .section-header {
+      top: 0px;
+      background-color: mix($color-background, $black, 90%);
+    }
 
     .section-content {
-      width: 275px;
+      top: 64px;
+      bottom: 0px;
+    }
+
+    .site-container,
+    .slack-invite {
       opacity: 0;
+      transition: all .3s ease;
+    }
+
+    .icon-web {
+      position: absolute;
+      right: 8px;
+      font-size: 1.2em;
+      color: $color-text-accent;
+      opacity: 1;
+      transition: all .3s ease;
+    }
+    
+    &:hover {
+      .section-header,
+      .section-content {
+        left: 0px;
+        @include card(2);
+        transition: all .3s ease;
+      }
+
+      .site-container,
+      .slack-invite {
+        opacity: 1;
+        transition: all .3s ease;
+      }
+
+      .icon-web {
+        opacity: 0;
+        transition: all .3s ease;
+      }
     }
   }
 }
