--- a/resources/assets/sass/layouts/_main.scss
+++ b/resources/assets/sass/layouts/_main.scss
@@ -99,6 +99,11 @@
         padding: $spacing;
         position: relative;
     }
+
+    .icon-web {
+        position: absolute;
+        opacity: 0;
+    }
 }
 
 // SECTION CONTENT
